examples/errors/type_mismatch.eigs
# ERROR DEMO — arithmetic on incompatible types.
# There is no implicit coercion: list - num has no meaning.
# expect-error: Error line 4: cannot apply '-' to list and num
x is [1, 2] - 5
